crates/aranya-policy-compiler/tests/data/match_expr/different_arm_types_invalid_type_1.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: bool
  |
3 |         1 => { :"one" }
  |                 ----- expected because of this
4 |         _ => { :false }
  |              ^^^^^^^^^^ expected `string` but found `bool`
